# Taller-Dev---FilmNegInvert-1.1.0

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TallerNegInvert.def  install.bat  installer.bat
docs/: ALGORITHM_AND_INTERNALS.md  USER_GUIDE.md  USER_GUIDE.txt
include/: FilmNegInvertPlugin.h  FilmNegInvertPluginFactory.h  TallerNegInvertPlugin.h  TallerNegInvertPluginFactory.h
scripts/: package.bat  test.bat
src/: FilmNegInvertPlugin.cpp  FilmNegInvertPluginFactory.cpp  TallerNegInvertPlugin.cpp  TallerNegInvertPluginFactory.cpp  mainEntry.cpp
